<resources>
    <string name="app_name">Serandianz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcomehd" />
    <string name="haeding1">Serandianz Food Plate</string>
    <string name="quote">For all your Sri Lankan food needs</string>
    <string name="regBt">Register</string>
    <string name="signIn">Sign In</string>
    <string name="welcomereg">"Welcome To "</string>
    <string name="appname">Serandianz Food Plate</string>
    <string name="cusRegBtn">Register as a Customer</string>
    <string name="FoodregBtn">REGISTER AS A FOOD ADMIN</string>
    <string name="delRegBtn">REGISTER AS A DELIVERY PERSON</string>
    <string name="wt_msg">Welcome To</string>
    <string name="txt_app_name">Serandianz Food Plate</string>
    <string name="txt_sign_msg">Sign up with Serandianz Food Plate</string>
    <string name="txt_instruct_msg">Please  provide all  necassary details</string>
    <string name="txt_name">Full Name</string>
    <string name="txt_address">Address</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="txt_nic">NIC Number</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_email">Email address</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_pwd">Password</string>
    <string name="txt_con_pwd" />
    <string name="txt_conf_pwd">Confirm Password</string>
    <string name="PT_full_name">Full Name</string>
    <string name="PT_address">Address</string>
    <string name="date_Of_birth">dob</string>
    <string name="Pt_nic">NIC</string>
    <string name="PT_phone_no" />
    <string name="PT_email">Email address</string>
    <string name="PT_uname">User name</string>
    <string name="pwd_first">password</string>
    <string name="pwd_conf">Confirm Password</string>
    <string name="txt_ag_msg">I agree to privacy policy</string>
    <string name="chk_box">check box</string>
    <string name="txt_agreement">I agree to  Privacy Policy</string>
    <string name="btn_join">Join with us</string>
    <string name="pay">Payment Information</string>
    <string name="order_summary">Order Summary</string>
    <string name="plain_bg" />
    <string name="food_id">Food Id</string>
    <string name="price">Price</string>
    <string name="foodId" />
    <string name="sub_total">Sub Total</string>
    <string name="delivery">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="confirm_btn">CONFIRM ORDER</string>
    <string name="paymethod">Payment Method</string>
    <string name="choose">Choose a payment method</string>
    <string name="card_bg" />
    <string name="cash_bg" />
    <string name="card_payment">CREDIT/DEBIT CARD PAYMENT</string>
    <string name="cashPayment">CASH ON DELIVERY</string>
    <string name="details">Enter Card Details</string>
    <string name="accept">We accept</string>
    <string name="card_nu" />
    <string name="exp_month" />
    <string name="ccv_no" />
    <string name="exp_year" />
    <string name="cardno">Enter card number</string>
    <string name="expiry_tv">Expiry date</string>
    <string name="month_tv2">month</string>
    <string name="year_tv">year</string>
    <string name="ccv_tv">CCV</string>
    <string name="card_num" />
    <string name="proceed">PROCEED</string>
    <string name="check_details">Check Card Details</string>
    <string name="confirm">Confirm Card Details</string>
    <string name="card">Card No</string>
    <string name="edit">Re-enter Crad Details</string>
    <string name="change">Re-enter Card Details</string>
    <string name="confirm_d">Confirm Card Details</string>
    <string name="view_button">"VIEW "</string>
    <string name="save_button">SAVE</string>
    <string name="try_btn">TRY</string>
    <string name="FoodDE">Food ID</string>
    <string name="FoodCater">Food category</string>
    <string name="FoodeyName">Food name</string>
    <string name="FoodQuanty">Quantity</string>
    <string name="Foodlocationorder">locatin</string>
    <string name="textFody">Food Id</string>
    <string name="Foodycat">Food Category</string>
    <string name="heOrder1">Add to Cart</string>
    <string name="helabojun">Helabojun...</string>
    <string name="Ikamn">ikman....</string>
    <string name="txtOrderdescription">In here you can plac a normal type food order</string>
    <string name="orderFoodanme">Food name</string>
    <string name="orderfoodtxt">Number of food plates</string>
    <string name="txtLocation">Location</string>
    <string name="ordrdatetxt"><![CDATA[order date & time]]></string>
    <string name="datedescription">When do yu want his order</string>
    <string name="placeOrderBtn">place my order</string>
    <string name="Vieworderbtn">View my order</string>
    <string name="msg1">Sign in as a customer</string>
    <string name="drtxt">Your password</string>
    <string name="txtpwd">Your password</string>
    <string name="forgetpwd">Forget password?</string>
    <string name="regDob">Dob</string>
    <string name="signInbtn">"Sign in "</string>
    <string name="lstartBtn">let\'s get started</string>
    <string name="homeMsg">My profile</string>
    <string name="Sigmsg">Sign in as a</string>
    <string name="btnstaff">Sign in as delivery person</string>
    <string name="signkl">Sign n as a Food admin</string>
    <string name="msgjk">Add to cart</string>
    <string name="hr">Helabojun</string>
    <string name="ikhj">ikman</string>
    <string name="foodnamet">Food Id</string>
    <string name="foodCat">Food catgory</string>
    <string name="tctFoodname">Food name</string>
    <string name="updatequntity">Number of food plates</string>
    <string name="locationtxt">Lcation</string>
    <string name="dategty">Date and time</string>
    <string name="btnoupdate">update my order</string>
    <string name="btnDeleteorder">Cancel my order</string>
    <string name="updtbnorder">Update my order</string>
    <string name="iewoderbtn">View my order</string>
    <string name="HelabOjutxt">HelaBojun</string>
    <string name="Viewfoody">view today menu</string>
    <string name="tct">Ikman.</string>
    <string name="ftyA">Add to cart</string>
    <string name="welcom">Hi</string>
    <string name="drname" />
    <string name="name">your name</string>
    <string name="adress">your address</string>
    <string name="dob">your birthday</string>
    <string name="nic">NIC</string>
    <string name="phoneNo">Phone number</string>
    <string name="emali">email</string>
    <string name="user">user</string>
    <string name="viewBTNM">View my profile</string>
    <string name="updateButton">Update my profile</string>
    <string name="deleteButton">elete my account</string>
    <string name="myUpdateBtn">Updat my profile</string>
    <string name="frt">Serandianz food Plate</string>
    <string name="myProfile">My profile</string>
    <string name="homeManily">Home</string>
    <string name="headRatings">Rate us</string>
    <string name="foodRate">Quality of food</string>
    <string name="foodRategh">Deliverygt</string>
    <string name="Foodqual">Quality of food</string>
    <string name="payRate">payment</string>
    <string name="staffRate">Staff service</string>
    <string name="Ratings">ratings</string>
</resources>